--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server",
     "seeder": "node utils/seeder.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd frontend1 && npm install && npm run build",
+    "heroku-postbuild": "npm i --prefix frontend1 npm run build --prefix frontend1",
     " heroku ps": "scale worker=0",
     "heroku ps": "scale worker=1"
   },
