--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "seeder": "node utils/seeder.js",
     "heroku-postbuild": "npm i --prefix frontend1 npm run build --prefix frontend1",
     " heroku ps": "scale worker=0",
-    "heroku ps": "scale worker=1"
+   
+    "heroku ps":"scale web=1"
   },
   "author": "Ghulam Abbas",
   "license": "ISC",
