--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server",
     "seeder": "node utils/seeder.js",
     "heroku-postbuild": "npm i --prefix frontend1 npm run build --prefix frontend1",
-    
+    "start": "node server.js",
     "heroku ps":"scale web=1"
    
    
