--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "engines": {
     "node": "16.16.0",
-    "npm": "8.11.0"
+    "npm": ">=8.11.0"
   },
   "scripts": {
     "back": "node server.js",
