--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "mongoose": "^5.10.16",
     "nodemailer": "^6.4.16",
     "stripe": "^10.12.0",
-    "validator": "^13.1.17"
-  },
-  "devDependencies": {
+    "validator": "^13.1.17",
     "nodemon": "^2.0.6"
   }
+ 
 }
