--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon server",
     "seeder": "node utils/seeder.js",
-    "heroku-postbuild": "npm i --prefix frontend1 npm run build --prefix frontend1",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm i --force --prefix frontend1 npm run build --prefix frontend1",
     "start": "node server.js",
     "heroku ps":"scale web=1"
    
